<?xml version="1.0"?>
<package>
  <name>simulator</name>
  <version>1.0.0</version>
  <description>The simulator package</description>
  <maintainer email="ricardol8a@gmail.com">Ricardo Lugo</maintainer>
  <license>TODO</license>
  <author email="ricardol8a@gmail.com">Ricardo Lugo</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>ardrone_autonomy</run_depend>
  <export>
  </export>
</package>
